[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-integration-demo"
version = "0.1.0"
description = "Relay a form/JSON intake to Slack or Discord: a small end-to-end API integration with production reliability details."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["integration", "webhook", "slack", "discord", "flask", "retry"]
dependencies = ["flask>=2.2"]

[project.optional-dependencies]
requests = ["requests>=2.28"]
dev = ["pytest>=7.0", "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/saifullah4khan/api-integration-demo"

[tool.setuptools.packages.find]
include = ["api_integration_demo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
